--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,103 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
 altair==5.5.0
-attrs==25.4.0
+annotated-types==0.7.0
+anyio==4.10.0
+attrs==25.3.0
+audioop-lts==0.2.2
+bcrypt==5.0.0
 blinker==1.9.0
+Brotli==1.1.0
 cachetools==6.2.2
-certifi==2025.11.12
-charset-normalizer==3.4.4
-click==8.3.1
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.3.0
+clipboard==0.0.4
+compose==1.6.2
+discord.py==2.6.3
+distro==1.9.0
+dlib==20.0.0
+face-recognition==1.3.0
+face_recognition_models==0.3.0
+Flask==3.1.2
+frozenlist==1.7.0
 gitdb==4.0.12
 GitPython==3.1.45
-idna==3.11
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+itsdangerous==2.2.0
 Jinja2==3.1.6
+jiter==0.10.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
-MarkupSafe==3.0.3
+MarkupSafe==3.0.2
+MouseInfo==0.1.3
+multidict==6.6.4
+mutagen==1.47.0
 narwhals==2.12.0
-numpy==2.3.5
+numpy==2.2.6
+openai==0.28.0
+opencv-python==4.12.0.88
+outcome==1.3.0.post0
 packaging==25.0
 pandas==2.3.3
-pillow==12.0.0
+pillow==11.3.0
+plotly==6.5.0
+propcache==0.3.2
 protobuf==6.33.1
 pyarrow==21.0.0
+PyAutoGUI==0.9.54
+pycryptodomex==3.23.0
+pydantic==2.11.7
+pydantic_core==2.33.2
 pydeck==0.9.1
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pyobjc-core==11.1
+pyobjc-framework-Cocoa==11.1
+pyobjc-framework-Quartz==11.1
+pyperclip==1.9.0
+PyRect==0.2.0
+PyScreeze==1.0.1
+PySocks==1.7.1
+pytesseract==0.3.13
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pytweening==1.2.0
 pytz==2025.2
+pyvenv==0.2.2
+qrcode==8.2
 referencing==0.37.0
 requests==2.32.5
 rpds-py==0.29.0
-setuptools==80.9.0
+rubicon-objc==0.5.2
+selenium==4.35.0
 six==1.17.0
 smmap==5.0.2
+sniffio==1.3.1
+sortedcontainers==2.4.0
 streamlit==1.51.0
+streamlit-chat-animated==0.0.3.3
 tenacity==9.1.2
+termcolor==1.1.0
+tex==1.8
 toml==0.10.2
 tornado==6.5.2
-typing_extensions==4.15.0
+tqdm==4.67.1
+trio==0.30.0
+trio-websocket==0.12.2
+typing-inspection==0.4.1
+typing_extensions==4.14.1
 tzdata==2025.2
 urllib3==2.5.0
-wheel==0.45.1
+webdriver-manager==4.0.2
+websocket-client==1.8.0
+websockets==15.0.1
+Werkzeug==3.1.3
+wsproto==1.2.0
+yarl==1.20.1
+yt-dlp==2025.10.22
 ytmusicapi==1.11.2
